# ESRGAN-candle-rs-wgpu

./: Cargo.toml  README.md
src/: main.rs  new_arch.rs
